
Improved Debugging:
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added setting to show location address of every basic line and current line on menu View Basic
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Added command line setting to load source code

Improved ZX Vision menu interface:
-Added GUI styles: BeOS, Bloody, Grass, Ocean, Sunny, Panther, Sky
-Added actions for reinsert, rewind, ffwd real tape
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added button on footer to switch ZX Desktop
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Added setting to disable boxes around lower and upper ZX Desktop Buttons
-Added support for accentuated characters
-Allow customize charset
-Allow customize upper buttons to actions
-Real tape icon now is animated when playing tape
-Reorganized GUI Settings and Window Settings menu: "GUI Settings" menu is now called "ZX Vision Settings", "Window Settings" menu is now called "General settings"
-Machine manufacturer list is now sorted by name (instead of some kind of mixed age and type)
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Handle when clicking a window when menu closed
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes
