@@ -110,3 +110,4 @@ DeZog load is working for SNA spectrum files but not for ZX81 .p file as it is n
 
 
 -menu arriba del todo al estilo de Mac. En pruebas, ver función menu_topbarmenu
+
