@@ -161,6 +161,7 @@ Improved Debugging:
 -Added command line setting to load source code
 
 Improved ZX Vision menu interface:
+-Reduced up to 5 times cpu usage on menu by using a cache
 -Added GUI styles: BeOS, Bloody, Grass, Ocean, Sunny, Panther, Sky
 -Added actions for reinsert, rewind, ffwd real tape
 -Added setting to pause cpu emulation on menu when multitask active
